landing-page: fix header spacing

--- a/_scss/_landing.scss
+++ b/_scss/_landing.scss
@@ -49,14 +49,12 @@ body#landing {
   }
 
   .hero {
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding-top: 20px;
 
     h2 {
       font-size: 32px;
       line-height: 32px;
       margin-bottom: 14px;
-      margin-top: 50px;
     }
   }
 
